# ong-scripts

./: .gitattributes  .gitignore
audio_bpm/: audio_player_with_tempo.py  requirements.txt
audioautoset/: Makefile  audioautoset.conf  audioautoset.py  audioautoset.spec  file_version_info.txt  pyproject.toml  requirements.txt
audiounfuck/: Makefile  README.md  audiounfuck.conf  audiounfuck.py  audiounfuck.spec  file_version_info.txt  pyproject.toml  requirements.txt
autohighlight/: .gitignore  Makefile  ahl_logparse.py  ahlextract.py  ahllogparse.py  ahlprocess.sh  autocrop.py  autocrop.spec  autocrop_version_info.txt  autoframe.py  autoframe2.py  cache_onglog.py  highlight_logparse.py  metaremux.py  multimerge.py  onglog.py  requirements.txt  ultralytics_default.yaml  vidaddmeta.py
dataproc/: datacleanup.sh  datasync.sh  datasync_all.sh  ong-datasync.defaults  ong-datasync.service  ong-datasync.timer  ong-datasync@.service
discord/: .gitignore  ongcode.py  ongcodebot.py  onglogbot.py  pyproject.toml  requirements.txt  testdist.py
discord/systemd/: ongcodebot.service  onglogbot-update.service  onglogbot-update.timer  onglogbot.service
livemonitor/: livemonitor.py  livemonitor.service  ong-offline.target  ong-online.target  requirements.txt
looperstream/: camera-config.sh  looper-ustreamer.service  looperstream.defaults  looperstream.py  looperstream.service  requirements.txt
obsstats/: Makefile  file_version_info.txt  obsstats.py  obsstats.spec  pyproject.toml  requirements.txt  telegraf_obs.conf
ojbpm/: README.md  ojbpm.py  requirements.txt  setbpm.py  telldiscord.py
ojbpm/systemd/: ojbpm-midi.service  ojbpm-notify.service  ojbpm-setter.service  ojbpm.defaults
ojbpm/testdata/: miditest_parsed.txt  miditest_parsed_noclock.txt  tests.txt  xx00  xx00_noclock  xx01  xx01_noclock  xx02  xx02_noclock  xx03  xx03_noclock  xx04  xx04_noclock  xx05  xx05_noclock  xx06  xx06_noclock  xx07  xx07_noclock  xx08  xx08_noclock  xx09  xx09_noclock
ongcodebot/: ongcode.py  requirements.txt
opencv/: Looper Marker Reference.psd  addtimecode.py  detect.py  findmarkers.py  paramtest.py  readtimecode.py  requirements.txt  thing.py
stemstream/: requirements.txt  stemstream.py  stemstream.service
streamer-bot-csharp/: .gitignore  streamer-bot-csharp.csproj  streamer-bot-csharp.sln
streamer-bot-csharp/src/: AutoconfigGlobals.cs  ConvertHexABGR.cs  HueAPI.cs  OBSWaitMediaDisabled.cs  OSCChannelOnOff.cs  ParseJson.cs  PickRecenterColor.cs  SubathonTimer.cs  osc_chan_onoff.cs
vodprep/: .gitignore  mkthumbnail.py  pyproject.toml  requirements.txt  thumbnail_concertgrand_template.psd  thumbnail_template.psd  vodprep.py
