[project]
name = "ong-discord-bots"
version = "0.1.0"
authors = [ { name = "TDV Alinsa", email = "alinsa-github@lupine.org" } ]
description = "Ong-related discord bots"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.13.10,<3.14"  # pycord doesn't officially support 3.14 yet
dependencies = [
    "aiohttp",
    "py-cord ~= 2.7.0",
    "audioop-lts",  # needed for pycord on later python versions
    "tdvutil",
    "toml",
    "peewee < 4",  # v4 shuffles some of the "Ext" bits, need to update our code
    "more-itertools",
    "rapidfuzz",
    "dateparser",
    "gspread",
    "openpyxl",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-dateparser",
    "types-peewee",
    "types-toml",
    "pandas-stubs",

    "flake8-async",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-import-conventions",
    "flake8-pyproject",
    "flake8-secure-coding-standard",
    "flake8-simplify",
    "flake8-use-pathlib",
]

[tool.mypy]
python_version = "3.13"

mypy_path = "typings"
exclude = "^(tests/|conftest\\.py|outputs/|typings/|out/)"

plugins = [ ]

# follow_imports = "silent"
# ignore_missing_imports = true
namespace_packages = true
warn_unused_configs = true

strict_optional = true
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_no_return = true

[tool.autopep8]
max_line_length = 96

ignore = [
    "E302", # not enough blank lines (sometimes useful)
    "E303", # too many blank lines (sometimes useful!)
    "E402", # "module level import not at top of file"
]

[tool.isort]
sections = [
    "FUTURE",
    "STDLIB",
    "FIRSTPARTY",
    "THIRDPARTY",
    "LOCALFOLDER",
]
