[project]
name = "obsstats"
version = "1.1.0"
description = "OBS Stats for Telegraf"
license = { text = "GPL-3.0-or-later" }
authors = [ { name = "TDV Alinsa", email = "alinsa-github@lupine.org" } ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.13, <4.0.0"

dependencies = [ "tdvutil>=0.0.6", "simpleobsws>=1.4.0" ]

[project.optional-dependencies]
build = [ "pyinstaller", "Pillow" ]

[build-system]
requires = [ "setuptools>=61.0", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.13"

mypy_path = "typings"
exclude = "^(tests/|conftest\\.py|outputs/|typings/|out/)"

# follow_imports = "silent"
# ignore_missing_imports = true
namespace_packages = true
warn_unused_configs = true

strict_optional = true
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_no_return = true

# [[tool.mypy.overrides]]
# module = [ "kaitaistruct.*" ]
# ignore_missing_imports = true


[tool.autopep8]
max_line_length = 96

ignore = [
    "E302", # not enough blank lines (sometimes useful)
    "E303", # too many blank lines (sometimes useful!)
    "E402", # "module level import not at top of file"
]


[tool.isort]
sections = [ "FUTURE", "STDLIB", "FIRSTPARTY", "THIRDPARTY", "LOCALFOLDER" ]

known_first_party = [  ]
